package domain.common.entities.person;

public class Email {
    private String emailText;

    public Email(String emailText) {
        this.emailText = emailText;
    }

	public String getEmailText() {
		return emailText;
	}

	public void setEmailText(String emailText) {
		this.emailText = emailText;
	}

   
}