package domain.entities.clientservice;

public class ClientServiceId {
	
	private int id;

	public ClientServiceId(int id) {
		super();
		this.id = id;
	}

	public int getId() {
		return id;
	}
	
}
