package domain.entities.exam;

import domain.entities.EntityId;

public class ExamId extends EntityId{

    public ExamId(int id) {
        super(id);
    }

    
}
