package domain.entities.examtest;

import domain.entities.EntityId;

public class ExamTestId extends EntityId{

	public ExamTestId(int id) {
		super(id);
	}
	
	
}
